cluster/apps/default/raspberry-pi-server/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: raspberry-pi-server
spec:
  selector:
    matchLabels:
      app: raspberry-pi-server
  replicas: 1
  template:
    metadata:
      labels:
        app: raspberry-pi-server
    spec:
      containers:
      - name: raspberry-pi-server
        image: ghcr.io/rustygreen/raspberry-pi-server:main
        ports:
        - containerPort: 5000
        securityContext:
          privileged: true
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: site
                operator: In
                values:
                - basement
      tolerations:
      - key: site
        operator: Equal
        value: basement
        effect: NoExecute
