cluster/apps/default/raspberry-pi-server/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: raspberry-pi-server
spec:
  ports:
    - port: 5000
      protocol: TCP
  selector:
    app:  raspberry-pi-server
