cluster/apps/default/raspberry-pi-server/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: raspberry-pi-server
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: pi-basement.${SECRET_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: raspberry-pi-server
                port:
                  number: 5000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - pi-basement.${SECRET_DOMAIN}
